force-app/main/default/objects/ssot__PartyPhilanthropicIndicator__dlm/fields/ssot__DateCollected__c.field-meta.xml
<CustomField>
    <fullName>ssot__DateCollected__c</fullName>
    <label>Date Collected</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DateCollected</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>