force-app/main/default/objects/ssot__PartyPhilanthropicIndicator__dlm/fields/ssot__EstimatedValue__c.field-meta.xml
<CustomField>
    <fullName>ssot__EstimatedValue__c</fullName>
    <label>Estimated Value</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EstimatedValue</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>