force-app/main/default/objects/ssot__PartyPhilanthropicIndicator__dlm/fields/ssot__Indicator__c.field-meta.xml
<CustomField>
    <fullName>ssot__Indicator__c</fullName>
    <label>Indicator</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Indicator</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>