force-app/main/default/objects/ssot__PartyPhilanthropicIndicator__dlm/fields/ssot__PartyPhilanthropicOccurrenceId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PartyPhilanthropicOccurrenceId__c</fullName>
    <label>Party Philanthropic Occurrence</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PartyPhilanthropicOccurrenceId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>