force-app/main/default/objects/ssot__PartyPhilanthropicIndicator__dlm/fields/ssot__rel_1731658759021_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731658759021_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PartyPhilanthropicIndicator_SourceId_rel</label>
    <referenceTo>ssot__BusinessMilestone__dlm</referenceTo>
    <relationshipLabel>PartyPhilanthropicIndicator_SourceId_rel</relationshipLabel>
    <relationshipName>rel_1731658759021_end</relationshipName>
    <type>Lookup</type>
</CustomField>