force-app/main/default/objects/ssot__PartyPhilanthropicIndicator__dlm/fields/ssot__RelatedOrganizationId__c.field-meta.xml
<CustomField>
    <fullName>ssot__RelatedOrganizationId__c</fullName>
    <label>Related Organization</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RelatedOrganizationId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>